@@ -161,7 +161,7 @@ Install the Error::Pure modules.
 
 =head1 REPOSITORY
 
-L<https://github.com/tupinek/Error-Pure-HTTP-JSON>
+L<https://github.com/michal-josef-spacek/Error-Pure-HTTP-JSON>
 
 =head1 AUTHOR
 
