@@ -31,7 +31,7 @@ requires:
   perl: 5.6.2
 resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=Error-Pure-HTTP-JSON
-  homepage: https://github.com/tupinek/Error-Pure-HTTP-JSON
+  homepage: https://github.com/michal-josef-spacek/Error-Pure-HTTP-JSON
   license: http://opensource.org/licenses/bsd-license.php
-  repository: git://github.com/tupinek/Error-Pure-HTTP-JSON
+  repository: git://github.com/michal-josef-spacek/Error-Pure-HTTP-JSON
 version: '0.06'
