@@ -80,7 +80,7 @@ SEE ALSO
         Install the Error::Pure modules.
 
 REPOSITORY
-    <https://github.com/tupinek/Error-Pure-HTTP-JSON>
+    <https://github.com/michal-josef-spacek/Error-Pure-HTTP-JSON>
 
 AUTHOR
     Michal Josef Špaček <mailto:skim@cpan.org>
